<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:padding="16dp"
    android:rowCount="12"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/form"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_marginBottom="20dp"
        android:hint="@string/surname" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sex"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_female"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_male"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/another"
            android:onClick="onRadioButtonClicked"
            android:checked="true"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/color"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/favorite_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_marginLeft="150dp"/>

    <ToggleButton
        android:id="@+id/languageToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_columnSpan="4"
        android:text="ToggleButton"
        android:textOn="@string/textOn"
        android:textOff="@string/textOff"/>

    <TextView
        android:id="@+id/birthday_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:hint="@string/birthday_date"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/birthday_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <Button
        android:id="@+id/sendForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:text="@string/send_form"
        android:onClick="onClickSendForm"/>

</GridLayout>